<resources>
    <string name="app_name">ActivityApplication</string>
    <string name="welcome_name_1">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcome_name_2">Созданный студентами 2-ого курса</string>
    <string name="welcome_name_3">Зарегистрироваться</string>
    <string name="welcome_name_4">Уже есть аккаунт?</string>
    <string name="regis_name_1">Регистрация</string>
    <string name="regis_name_2">Логин</string>
    <string name="regis_name_3">Имя или никнейм</string>
    <string name="regis_name_4">Пароль</string>
    <string name="regis_name_5">Повторите пароль</string>
    <string name="regis_name_6">
        Нажимая на кнопку, вы соглашаетесь с <font color='#FF3700B3'>политикой конфиденциальности</font> и обработки персональных данных, а также принимаете <font color='#FF3700B3'>пользовательское соглашение</font>
    </string>
    <string name="regis_radio_name_1">Пол</string>
    <string name="regis_radio_name_2">Мужской</string>
    <string name="regis_radio_name_3">Женский</string>
    <string name="regis_radio_name_4">Другое</string>
    <string name="login_name_1">Вход</string>
    <string name="login_name_2">Войти</string>
    <string name="splash_name">A C T I V I T Y</string>
    <string name="profile_track">Profile Fragment</string>
    <string name="tracker_activity">My Tracking Fragment</string>
    <string name="other_activity">Other Tracking Fragment</string>
    <string name="menu_action">Активность</string>
    <string name="menu_profile">Профиль</string>
    <string name="my_detail_toolbar_title">Toolbar</string>
    <string name="date_label">Date</string>
    <string name="my_detail_start">Start</string>
    <string name="my_detail_finish">Finish</string>
    <string name="my_detail_divide">|</string>
    <string name="my_detail_start_time">Start</string>
    <string name="my_detail_finish_time">Finish</string>
    <string name="my_detail_edit_comment">Comment</string>
    <string name="my_detail_duration">Duration</string>
    <string name="my_detail_distance">Distance</string>
    <string name="my_item_activity_type">Activity Type</string>
    <string name="user_detail">User</string>
</resources>