<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_detail_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_button"
        app:title="@string/my_detail_toolbar_title"
        app:menu="@menu/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/my_detail_viewLine"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_detail_toolbar">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_distance"
        android:text="@string/my_detail_distance"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_detail_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_date"
        android:text="@string/date_label"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_distance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_duration"
        android:text="@string/my_detail_duration"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_start"
        android:text="@string/my_detail_start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_start_time"
        android:text="@string/my_detail_start_time"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/detail_start"
        app:layout_constraintTop_toBottomOf="@id/detail_duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_divide"
        android:text="@string/my_detail_divide"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/detail_start_time"
        app:layout_constraintEnd_toStartOf="@+id/detail_finish"
        app:layout_constraintTop_toBottomOf="@id/detail_duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_finish"
        android:text="@string/my_detail_finish"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/detail_start_time"
        app:layout_constraintTop_toBottomOf="@id/detail_duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_finish_time"
        android:text="@string/my_detail_finish_time"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/detail_finish"
        app:layout_constraintTop_toBottomOf="@id/detail_duration"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/detail_comment"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_start">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_edit_comment"
            android:hint="@string/my_detail_edit_comment"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>